--- a/mssge/doc/vlbipa.tex
+++ b/mssge/doc/vlbipa.tex
@@ -381,10 +381,14 @@ four distinct values: -3, -1, +1, +3.
 \rwregn{quant/thresh0}
 \rwregn{quant/thresh1}
 \rwregn{quant/thresh2}
-\rwregs{quant/thresh3}  These registers set the thresholding level for each
-input.  The quantized value for a given input value of $x$ and threshold value
-$thresh$ is determined according to the equations shown here.  Note that the
-output value for a zero valued input alternates between -1 and +1.
+\rwregs{quant/thresh3}  These registers set the thresholding level used for
+quantizing each input to 2~bits.  When using a digital noise source as an
+input, a threshold value of 16 results in a $\left\{\frac{1}{6}, \frac{2}{6},
+\frac{2}{6}, \frac{1}{6}\right\}$ distribution in the 2~bit quantized values.
+
+The quantized value for a given input value of $x$ and threshold value $thresh$
+is determined according to the equations shown here.  Note that the output
+value for a zero valued input alternates between -1 and +1.
 
 \begin{align*}
            &\,x <= -thresh &\Rightarrow -3 \\
@@ -508,7 +512,7 @@ connector.
 
 \section{bee2\_complex\_corr}
 
-This section documents the bee2\_complex\_corr\_floating\_2011\_Feb\_03\_1041
+This section documents the bee2\_complex\_corr\_floating\_2011\_Feb\_07\_2108
 design.
 
 The bee2\_complex\_corr design receives 2+2 bit samples (i.e. 2 real bits and 2
